--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.465.0",
     "@aws-sdk/client-ses": "3.462.0",
-    "@hashgraph/sdk": "^2.37.0",
+    "@hashgraph/sdk": "^2.49.2",
     "@nomicfoundation/hardhat-toolbox": "^2.0.1",
     "alchemy-sdk": "3.1.0",
     "aws-sdk": "2.1492.0",
@@ -42,12 +42,12 @@
     "multer": "1.4.4",
     "multer-s3": "3.0.1",
     "mybatis-mapper": "^0.6.8",
-    "mysql2": "3.0.0",
+    "mysql2": "^3.0.0",
     "node-cron": "^2.0.3",
     "node-rsa": "^1.0.8",
     "nodemailer": "6.9.4",
     "nodemon": "^3.0.1",
-    "pg": "^8.11.2",
+    "pg": "^8.12.0",
     "pg-hstore": "2.3.3",
     "redis": "^3.0.2",
     "request": "^2.88.2",
